test git comment

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <body class="w3-black">
 
 
+        <!-- test comment for git -->
 
         <!-- Slide 1 -->
         <section class="mySlides fs img-1">
